<RelativeLayout
    android:id="@+id/view1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.travelNotes.MainActivity">

    <RadioGroup
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@mipmap/home_background"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/homePage"
            style="@style/tab_menu_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            android:textSize="12dp"
            android:button="@null"
            android:background="@null"
            android:drawablePadding="5dp"
            android:layout_marginTop="15dp"
            android:textColor="@drawable/bottom_icon_text_selector"
            android:drawableTop="@drawable/home_page" />

        <RadioButton
            android:id="@+id/note"
            style="@style/tab_menu_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="5dp"
            android:layout_marginTop="15dp"
            android:drawableTop="@drawable/note"
            android:text="@string/note"
            android:textSize="12dp"
            android:textColor="@drawable/bottom_icon_text_selector" />



        <RadioButton
            android:id="@+id/me"
            style="@style/tab_menu_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/me"
            android:layout_marginTop="15dp"
            android:text="@string/me"
            android:textSize="12dp"
            android:textColor="@drawable/bottom_icon_text_selector" />

    </RadioGroup>



    <com.travelNotes.fragment.CustomViewPager
        android:id="@+id/vpager"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottom_bar" />


</RelativeLayout>
