<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400px"
                android:background="@mipmap/noteb">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <RelativeLayout
                        android:id="@+id/relative_01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="36dp"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentTop="true">
                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/my"
                            android:textSize="18dp"
                            android:layout_centerHorizontal="true"
                            android:textColor="@color/white"
                            />
                    </RelativeLayout>
                </RelativeLayout>
                <com.travelNotes.common.XCRoundImageView
                    android:id="@+id/XCRoundImageView"
                    android:layout_width="160px"
                    android:layout_height="160px"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="35dp"
                    android:background="@mipmap/my_avatar"
                    android:gravity="center_horizontal" />


            </RelativeLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                //我的收藏
                <RelativeLayout
                    android:id="@+id/collection"
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:layout_marginTop="30px"
                    android:background="#FFFFFF">
                    <ImageView
                        android:layout_width="24px"
                        android:layout_height="21px"
                        android:layout_marginLeft="45px"
                        android:layout_marginTop="41px"
                        app:srcCompat="@mipmap/my_icon_collect"/>
                    <TextView
                        android:layout_width="200px"
                        android:layout_height="40px"
                        android:layout_marginTop="30px"
                        android:layout_marginLeft="112px"
                        android:gravity="center_vertical"
                        android:text="@string/my_collect"
                        android:textSize="30px"
                        android:textColor="#333333"/>
                </RelativeLayout>
                <View
                    android:layout_width="660px"
                    android:layout_height="2px"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/border_background"
                    />

                //编辑资料
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:background="#FFFFFF">
                    <ImageView
                        android:layout_width="15px"
                        android:layout_height="24px"
                        android:layout_marginLeft="50px"
                        android:layout_marginTop="41px"
                        app:srcCompat="@mipmap/my_icon_phone"/>
                    <TextView
                        android:layout_width="200px"
                        android:layout_height="40px"
                        android:layout_marginTop="30px"
                        android:layout_marginLeft="112px"
                        android:gravity="center_vertical"
                        android:text="@string/edit_person_info"
                        android:textSize="30px"
                        android:textColor="#333333"/>
                </RelativeLayout>
                <View
                    android:layout_width="660px"
                    android:layout_height="2px"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/border_background"
                    />


                //消息
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:background="#FFFFFF">
                    <ImageView
                        android:layout_width="24px"
                        android:layout_height="24px"
                        android:layout_marginLeft="45px"
                        android:layout_marginTop="41px"
                        app:srcCompat="@mipmap/my_icon_msg"/>
                    <TextView
                        android:layout_width="200px"
                        android:layout_height="40px"
                        android:layout_marginTop="30px"
                        android:layout_marginLeft="112px"
                        android:gravity="center_vertical"
                        android:text="@string/my_msg"
                        android:textSize="30px"
                        android:textColor="#333333"/>
                </RelativeLayout>
                <View
                    android:layout_width="660px"
                    android:layout_height="2px"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/border_background"
                    />


                //帮助中心
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:background="#FFFFFF">

                    <ImageView
                        android:layout_width="24px"
                        android:layout_height="24px"
                        android:layout_marginLeft="45px"
                        android:layout_marginTop="41px"
                        app:srcCompat="@mipmap/my_icon_help" />

                    <TextView
                        android:layout_width="200px"
                        android:layout_height="40px"
                        android:layout_marginLeft="112px"
                        android:layout_marginTop="30px"
                        android:gravity="center_vertical"
                        android:text="@string/help_center"
                        android:textColor="#333333"
                        android:textSize="30px" />
                </RelativeLayout>
                <View
                    android:layout_width="660px"
                    android:layout_height="2px"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/border_background"
                    />

                //设置
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100px"
                    android:background="#FFFFFF">
                    <ImageView
                        android:layout_width="24px"
                        android:layout_height="24px"
                        android:layout_marginLeft="45px"
                        android:layout_marginTop="41px"
                        app:srcCompat="@mipmap/my_icon_set"/>
                    <TextView
                        android:layout_width="200px"
                        android:layout_height="40px"
                        android:layout_marginTop="30px"
                        android:layout_marginLeft="112px"
                        android:gravity="center_vertical"
                        android:text="@string/my_set"
                        android:textSize="30px"
                        android:textColor="#333333"/>
                </RelativeLayout>
                <View
                    android:layout_width="660px"
                    android:layout_height="2px"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/border_background"
                    />




            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>