<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

       <RelativeLayout
           android:id="@+id/home_page_bar"
           android:orientation="vertical"
           android:background="@mipmap/home_background"
           android:layout_width="match_parent"
           android:layout_height="60dp">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >
               <RelativeLayout
                   android:id="@+id/relative_01"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="30dp"
                   android:layout_marginBottom="8dp"
                   android:layout_alignParentTop="true">
                   <ImageView
                       android:id="@+id/icon_more"
                       android:layout_width="20dp"
                       android:layout_height="15dp"
                       android:layout_marginLeft="24dp"
                       android:src="@mipmap/home_page_more"
                       android:layout_alignBottom="@+id/textView2"
                       android:layout_alignParentLeft="true"
                       android:layout_alignParentStart="true" />
                   <TextView
                       android:id="@+id/textView2"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/home_page"
                       android:textSize="18dp"
                       android:layout_centerHorizontal="true"
                       android:textColor="@color/white"
                       />
                   <ImageView
                       android:id="@+id/icon_add"
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:layout_marginRight="24dp"
                       android:src="@mipmap/search_icon"
                       android:layout_alignParentRight="true"
                       />
               </RelativeLayout>
           </RelativeLayout>

       </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@mipmap/follow_background"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            >

            <Button
                android:id="@+id/follow"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                android:background="@drawable/bg_round_white"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@mipmap/recommend_background"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            >

            <Button
                android:id="@+id/recommend"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_round_white"
                android:text="@string/recommend"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </RelativeLayout>
    </TableLayout>




</LinearLayout>